@@ -68,10 +68,7 @@
 
 <ACTION NAME="vfs.browser.insert">
 	<CODE>
-		for(int i = 0; i &lt; files.length; i++)
-		{
-			buffer.insertFile(view,files[i].path);
-		}
+		browser.filesActivated(VFSBrowser.M_INSERT,false);
 	</CODE>
 </ACTION>
 
